test/langtools/tools/javac/T8314423.out
T8314423.java:15:24: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.unnamed.variables)
1 error